--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "4.1.1",
     "i": "^0.3.6",
-    "jQuery": "^1.7.4",
     "jquery": "^3.3.1",
     "npm": "^6.4.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-redux": "^5.0.7",
+    "react-scripts": "2.0.5",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start-db | npm run start-react",
+    "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-db": "json-server --watch DB/db.json --port 3004"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6"
   },
   "eslintConfig": {
     "extends": "react-app"
